--- a/froyo.html
+++ b/froyo.html
@@ -3,10 +3,39 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>fROYO</title>
+    <title>Froyo</title>
+    <link rel="stylesheet" href="froyo.css">
     <script src="froyo.js"></script>
 </head>
-<body>
-    
+<body> 
+
+    <h1>Froyo</h1>
+    <p>Welcome to the Froyo page!</p>
+    <p>Pick Flavors</p>
+
+    <article>
+    <h2>Flavors</h2>
+    <ul>
+        <li>Vanilla</li>
+        <li>Chocolate</li>
+        <li>Strawberry</li>
+        <li>Mint</li>
+        <li>Cookie Dough</li>
+        <li>Mango</li>
+        <li>Coffee</li>
+        <li>Green Tea</li>
+        <li>Peanut Butter</li>
+        <li>Blueberry</li>
+        <li>Raspberry</li>
+
+    </ul>
+    </article>
+
+    <button id="froyoButton">Click foryo!</button>
+    <script>
+        document.getElementById('froyoButton').addEventListener('click', function() {
+            alert('Froyo button clicked!');
+        });
+    </script>
 </body>
 </html>
